--- a/README
+++ b/README
@@ -1,28 +1,17 @@
-Завдання 12
-Створити додаток для додавання елементів і перегляду списку елементів у
-множині цілих чисел типу Integer. Множина (10 елементів) створюється в
-програмі і є об'єктом класу HashSet (елементи множини не повинні повторюватись).
-Передбачити можливість сортування за допомогою TreeSet.
+Завдання 1
+Побудувати програму для роботи з класом для зберігання даних про криву y(x)
+другого порядку - гіперболу. Програма повинна забезпечувати:
+розрахунок y по х і навпаки, введення/виведення значень.
 
-Завдання 15
-Створити додаток для покупки продуктів в магазині з доставкою.
-Список продуктів (5 записів) створюється в програмі і є об'єктом класу HashMap.
-Ключем запису є артикул продукту (типу Integer), а значенням - об'єкт Article,
-що містить найменування продукту (типу String) і ціну товару (типу float).
-Передбачити можливість перевірки унікальності найменування товару за допомогою TreeSet.
+Завдання 13
+Створити клас Квадрат. Поля - сторона. Функції-члени обчислюють площу, периметр квадрата,
+встановлюють і повертають значення полів. Функції-члени встановлення значень полів
+повинні перевіряти коректність заданих значень.
 
-Завдання 18
-Створити додаток для перегляду списку книг в магазинному каталозі і зміни ціни
-книги. Список книг (5 записів) створюється в програмі і є об'єктом класу HashMap.
-Ключем записи є індекс ISBN книги (типу Integer), а значенням - об'єкт Book,
-що містить найменування книги, ПІБ автора, видавництво (типу String),
-рік видання (типу int) і ціну книги (типу float). Передбачити можливість сортування
-книг по видавництву або ціною, використовуючи ArrayList.
+Завдання 17
+Створити клас записної книжки (поля: ім'я, нік, мобільний телефон,
+адреса електронної пошта, номер ICQ).
 
-Завдання 28
-Створити додаток для перегляду, додавання і видалення елементів списку студентів.
-Список (5 елементів) створюється в програмі і є об'єктом класу ArrayList.
-Кожен елемент списку містить прізвище, ім'я та по батькові (ПІБ) студента
-(типу String), ім'я групи (типу String), дату народження (типу BirthDate) і
-середню оцінку за минулу сесію (типу float). Об'єкт класу BirthDate в свою
-чергу містить три елементи типу int (рік, номер місяця і день народження).
+Завдання 33
+Створити базовий клас Комп'ютер (назва, частота процесор, кількість ядер, об'єм ОЗУ,
+постійної пам'яті), похідний клас  Ноутбук (діагональ екрану, вага, об'єм батареї).
